src/tests/fixtures/preprocessor/errors/error4.cpp
#define boo

int foo 132151

